[package]
name = "tlv-derive"
version = "0.1.0"
edition = "2021"

[dependencies]
prettyplease.workspace = true
quote.workspace = true
attribute-derive = { version = "0.10.3", features = ["syn-full"] }
syn = { workspace = true, features = ["full", "extra-traits"] }
bytes.workspace = true
proc-macro2.workspace = true
anyhow.workspace = true
proc-macro-error.workspace = true

[lib]
proc-macro = true
