[package]
name = "tlv-derive"
version = "0.1.0"
edition = "2024"

[dependencies]
prettyplease.workspace = true
quote.workspace = true
attribute-derive.workspace = true
syn.workspace = true
bytes.workspace = true
proc-macro2.workspace = true
proc-macro-error.workspace = true

[lib]
proc-macro = true
